--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 Django==2.2.7
 django-admin==2.0.0
 django-appconf==1.0.3
+django-ckeditor==5.9.0
 django-compressor==2.3
 django-excel-response2==2.0.8
+django-js-asset==1.2.2
 django-libsass==0.7
 django-six==1.0.4
 libsass==0.19.4
+Pillow==7.1.2
+pkg-resources==0.0.0
 pytz==2019.3
 rcssmin==1.0.6
 rjsmin==1.1.0
@@ -13,5 +17,3 @@ screen==1.0.1
 six==1.13.0
 sqlparse==0.3.0
 xlwt==1.3.0
-django-ckeditor==5.9.0
-Pillow==7.1.2
